--- a/html/css/grayscale.css
+++ b/html/css/grayscale.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100%;
   color: white;
-  background-color: black; }
+  background-color: darkgrey; }
 
 html {
   width: 100%;
@@ -100,8 +100,8 @@ a {
   padding: 200px 0;
   text-align: center;
   color: white;
-  background: url('pic.jpg') no-repeat bottom center scroll;
-  filter: contrast(200%);
+  background: url('pic5.jpg') no-repeat bottom center scroll;
+  filter: contrast(100%);
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -156,7 +156,8 @@ a {
 
 #map {
   width: 100%;
-  height: 300px; }
+  height: 300px;
+  position: fixed;}
 
 @media (min-width: 992px) {
   .content-section {
@@ -220,4 +221,5 @@ img::-moz-selection {
   background: transparent; }
 
 body {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+  background-color: midnightblue; }
